--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.8",
+    "@langchain/ollama": "^0.2.3",
+    "chromadb": "^3.0.5",
     "express": "^5.1.0",
+    "langchain": "^0.3.29",
     "node-fetch": "^3.3.2",
     "redis": "^5.5.6",
     "socket.io": "^4.8.1"
